fix: fix scrollbars style

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -40,7 +40,7 @@
 	// 表格表头
 	&-header {
 		position: relative;
-		z-index: -80;
+		z-index: 20;
 
 		overflow: hidden;
 
@@ -110,14 +110,14 @@
     }
     .@{prefixCls}-col-overlap {
       position: relative;
-      z-index: -91;
+      z-index: 0;
       .@{prefixClsCell} {
         border: 0;
       }
     }
     &-active {
       .@{prefixCls}-col-overlap {
-        z-index: -85;
+        z-index: 15;
       }
     }
     &-fixed {
@@ -153,7 +153,7 @@
   &-arrangement {
     line-height: 20px;
 
-    z-index: -90;
+    z-index: 0;
 
     overflow: hidden;
 
